# plex-lastfm-scrobbler

./: Dockerfile  README.md  pyproject.toml  requirements.txt
plex_last_fm_scrobbler/: __init__.py  config.py  main.py  utils.py
plex_last_fm_scrobbler/clients/: lastfm.py
plex_last_fm_scrobbler/sources/: __init__.py  plex.py
