[project]
name = "plex-last-fm-scrobbler"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "plexapi>=4.16.0",
    "pylast>=5.3.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
]

[project.urls]
"Homepage" = "https://github.com/f0e/plex-last-fm-scrobbler"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["mypy>=1.13.0", "pre-commit>=4.0.1", "ruff>=0.8.2"]

[tool.ruff]
lint.extend-select = ["I"] # enable import sorting

[tool.mypy]
check_untyped_defs = true

[tool.hatch.metadata]
allow-direct-references = true # allow git dependencies todo: why do i need to do this

[project.scripts]
plex-last-fm-scrobbler = "plex_last_fm_scrobbler.main:main"
